Integration theory edit, get to T4T, T1T.
Integration theory now framed in terms of questions and ab. groups that
provide the theoretical, tautoligocal answers. The following sections
provides geometric answers in the case where the integration theory is
knots.

Singular isotopies introduced to motivate (path) 'integration'.
Topological relations obtained from singular isotopies around 'holes' in
the stratification.

--- a/setup.tex
+++ b/setup.tex
@@ -170,6 +170,8 @@
 \newtheorem{remarks}[theorem]{Remarks}
 \newtheorem{exercise}[theorem]{Exercise}
 \newtheorem{warning}[theorem]{Warning}
+\newtheorem{question}[theorem]{Question}
+\newtheorem{questions}[theorem]{Questions}
 
 % Environments for proofs
 \theoremstyle{nonumberplain}
