Topological four term figures

--- a/macros.tex
+++ b/macros.tex
@@ -11,3 +11,9 @@
 \newcommand*{\double}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_singular_point.pdf}}}
 \newcommand*{\poscross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_positive_crossing.pdf}}}
 \newcommand*{\negcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_negative_crossing.pdf}}}
+
+
+\newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_south.pdf}}}
+\newcommand*{\tfteast}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_east.pdf}}}
+\newcommand*{\tftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_north.pdf}}}
+\newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_west.pdf}}}
