--- a/setup.tex
+++ b/setup.tex
@@ -145,6 +145,9 @@
 
 \graphicspath{{graphics/}}
 
+% Inkscape with LaTeX
+\usepackage{calc}
+
 
 % STATEMENT ENVIRONMENTS (theorem, definition, proof, etc.)
 
