Add topological one term

--- a/macros.tex
+++ b/macros.tex
@@ -13,7 +13,9 @@
 \newcommand*{\negcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_negative_crossing.pdf}}}
 
 
-\newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_south.pdf}}}
-\newcommand*{\tfteast}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_east.pdf}}}
-\newcommand*{\tftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_north.pdf}}}
-\newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.1\textwidth]{topological_four_term_west.pdf}}}
+\newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_south.pdf}}}
+\newcommand*{\tfteast}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_east.pdf}}}
+\newcommand*{\tftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_north.pdf}}}
+\newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_west.pdf}}}
+
+\newcommand*{\tot}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
