--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -167,12 +167,12 @@ in which case we write \(P = Q'\). This is like a ``path-integral'' along a sing
 
 \begin{definitions}
 	\begin{enumerate}
-		\item The following singular isotopy around a triple point:
+		\item The following closed singular isotopy around a triple point:
 			\begin{center}
 				\def\svgwidth{0.6\columnwidth}
 				\input{graphics/triple_point_singular_isotopy.pdf_tex}
 			\end{center}
-			gives rise to the \textbf{topological four-term relation}
+		gives rise to the \textbf{topological four-term relation}
 			\begin{equation}
 				\label{eq:topological-four-term}
 				\tag{\biolinumLF{T4T}}
@@ -185,7 +185,17 @@ in which case we write \(P = Q'\). This is like a ``path-integral'' along a sing
 				f\left( \tftwest \right)
 				= 0.
 			\end{equation}
-		\item The singular isotopy around a singular point with vanishing derivative
+		\item The closed singular isotopy
+			\begin{center}
+				\def\svgwidth{0.6\columnwidth}
+				\input{graphics/vanishing_derivative_singular_isotopy.pdf_tex}
+			\end{center}
+		around a point with a vanishing derivative gives rise to the \textbf{topological one-term relation}
+			\begin{equation}
+				\label{eq:topological-one-term}
+				\tag{\biolinumLF{T1T}}
+				f\left( \tot \right) = 0.
+			\end{equation}
 	\end{enumerate}
 \end{definitions}
 
