--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -199,7 +199,25 @@ in which case we write \(P = Q'\). This is like a ``path-integral'' along a sing
 	\end{enumerate}
 \end{definitions}
 
-% NOTE: Here: why is it necessary only to consider weight systems? The symbol-level 4T and 1T relations.
+The necessity of the above relations for an invariant of \(m\)-singular knots to integrate is equivalent to the assertion that
+\[
+	\tftsouth
+	\ - \
+	\tfteast
+	\ - \
+	\tftnorth
+	\ + \
+	\tftwest
+	\quad \text{and} \quad
+	\tot
+\]
+are in \(P\mathcal{K}_{m} = \ker \partial_{m}\).
+
+% TODO: The following:
+% - Are these sufficient conditions for integration?
+% - What about integrating again and again? i.e. secondary obstructions: Willerton and Hutchings' results
+% - This will involve introducing weight systems and chord diagrams
+% - Finite type/Vassiliev invariants
 
 The constants of integration are the information that is lost when differentiating, or the information to be chosen when integrating. In the case of knots, \(C\mathcal{K}_{m} = \mathcal{K}_{m} / \partial \mathcal{K}_{m + 1}\), so \(m\)-singular knots modulo (the image of) \((m + 1)\)-singular knots. Since the objects already have \(m\) singular points, the quotient asserts that additional crossing changes are free. For example, the following \(2\)-singular knots differ by the image of a \(3\)-singular knot, so are equivalent in \(C\mathcal{K}_{2}\):
 
