Change eqn tags to tty typeface

--- a/macros.tex
+++ b/macros.tex
@@ -19,3 +19,8 @@
 \newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_west.pdf}}}
 
 \newcommand*{\tot}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
+
+% ALGEBRAIC
+
+% Dual in text mode
+\newcommand{\dual}{\textsuperscript{*}}
