--- a/setup.tex
+++ b/setup.tex
@@ -12,7 +12,7 @@
 \usepackage[T1]{fontenc}  % this does a bunch of things, but for one, it makes
                 % complicated characters searchable in the produced .pdf.
 
-\usepackage{libertine} % to change font you'll have to remove commands such as
+\usepackage[tt=false]{libertine} % to change font you'll have to remove commands such as
 % \libertineDisplay from the title plage and chapter titles.
 
 % TITLE PAGE AND CHAPTER TITLES
