1ary and 2ndary obstructions to integrating knots

--- a/macros.tex
+++ b/macros.tex
@@ -20,7 +20,16 @@
 
 \newcommand*{\tot}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
 
-% ALGEBRAIC
+% T4T and T1T (as sums of singular knots)
+\newcommand{\tftterm}{\mathbf{T4T}}
+\newcommand{\totterm}{\mathbf{T1T}}
 
-% Dual in text mode
-\newcommand{\dual}{\textsuperscript{*}}
+% T4T and T1T, DIFF (as relations on invariants)
+\newcommand{\tftinv}{\texttt{T4T}}
+\newcommand{\totinv}{\texttt{T1T}}
+\newcommand{\diffinv}{\texttt{DIFF}}
+
+% T4T and T1T, DIFF (as relations on singular knots)
+\newcommand{\tftrel}{\texttt{T4T}\ensuremath{^\ast}}
+\newcommand{\totrel}{\texttt{T1T}\ensuremath{^\ast}}
+\newcommand{\diffrel}{\texttt{DIFF}\ensuremath{^\ast}}
