--- a/references.bib
+++ b/references.bib
@@ -142,3 +142,13 @@
 	volume = {8},
 	journal = {Selecta Mathematica, New Series},
 }
+
+@article{finite-type-invariants-of-knots-links-and-graphs,
+	title = {Finite-type invariants of knots, links, and graphs},
+	journal = {Topology},
+	volume = {35},
+	number = {4},
+	pages = {1027-1050},
+	year = {1996},
+	author = {Ted Stanford},
+}
