--- a/setup.tex
+++ b/setup.tex
@@ -161,6 +161,7 @@
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{conjecture}[theorem]{Conjecture}
 
 % Environments with body set in upright
 \theorembodyfont{\normalfont}
