--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -35,7 +35,7 @@ What are the conditions? For this to be a well-defined operation, it mustn't mat
 	An invariant \(f\) of \(m\)-singular knots is \textbf{differentiable} if
 	\begin{equation}
 		\label{eq:diff}
-		\tag{\texttt{DIFF}}
+		\tag{\diffinv}
 		f \left( \poscross \ \double \right) - f\left( \negcross \ \double \right) = f \left( \double \ \poscross \right) - f\left( \double \ \negcross \right).
 	\end{equation}
 \end{definition}
@@ -49,7 +49,7 @@ Rather than thinking about functions on knots satisfying certain relations, the 
 	Define \(\mathcal{K}_{m} = \operatorname{span}(\{m\text{-singular knots}\})\) modulo the following boundary relation (also known as a codifferentiability relation):
 	\begin{equation}
 		\label{eq:boundary}
-		\tag{\texttt{DIFF\dual}}
+		\tag{\diffrel}
 		\poscross \ \double - \negcross \ \double = \double \ \poscross - \double \ \negcross.
 	\end{equation}
 
@@ -121,6 +121,7 @@ where \(\delta_{m}\) is the transpose of \(\partial_{m}\). The maps \(\delta\) b
 
 We wish to understand how to invert this process, namely:
 \begin{questions}
+	\label{qu:integration-theory}
 	\begin{enumerate}
 		\item When does a functional in \(\mathcal{O}^{\ast}_{m}\) ``integrate'' into a functional in \(\mathcal{O}^{\ast}_{m - 1}\)?
 		\item When does such a functional integrate multiple times, in-particular when does it integrate \(m\) times into a functional in \(\mathcal{O}^{\ast}_{0}\), (i.e. a function on the non-singular objects)?
@@ -130,6 +131,7 @@ We wish to understand how to invert this process, namely:
 \end{questions}
 The following abelian groups provide the tautological answers to the above questions in the general theory.
 \begin{definitions}
+	\label{def:integration-theory-groups}
 	\begin{enumerate}
 		\item The \textbf{primary obstructions to integration} are the group
 			\[P\mathcal{O}_{m} = \ker{\partial_{m}}.\]
@@ -176,7 +178,7 @@ in which case we write \(P = Q'\). This is like a ``path-integral'' along a sing
 		gives rise to the \textbf{topological four-term relation}
 			\begin{equation}
 				\label{eq:topological-four-term}
-				\tag{\texttt{T4T}}
+				\tag{\tftinv}
 				f\left( \tftsouth \right)
 				-
 				f\left( \tfteast \right)
@@ -194,7 +196,7 @@ in which case we write \(P = Q'\). This is like a ``path-integral'' along a sing
 		around a point with a vanishing derivative gives rise to the \textbf{topological one-term relation}
 			\begin{equation}
 				\label{eq:topological-one-term}
-				\tag{\texttt{T1T}}
+				\tag{\totinv}
 				f\left( \tot \right) = 0.
 			\end{equation}
 	\end{enumerate}
@@ -212,7 +214,24 @@ The necessity of the above relations for an invariant of \(m\)-singular knots to
 	\quad \text{and} \quad
 	\tot
 \]
-are in \(P\mathcal{K}_{m} = \ker \partial_{m}\).
+are in \(P\mathcal{K}_{m} = \ker \partial_{m}\). Let us denote arbitrary such singular knots \(\tftterm\) and \(\totterm\).
+
+The question that arises is whether we have found all primary obstructions. Do \(\tftterm\) and \(\totterm\) span \(\ker \partial\)?
+
+\begin{theorem}[Stanford \cite{finite-type-invariants-of-knots-links-and-graphs}]
+	An invariant \(f\) of \(m\)-singular knots integrates to an invariant of \(m - 1\)-singular knots if and only if it satisfies \textup{\ref{eq:topological-four-term}} and \textup{\ref{eq:topological-one-term}}.
+\end{theorem}
+
+\begin{proof}[sketch]
+	% TODO: Fill out Stanford's integration homotopy proof
+	\begin{mdframed}
+		Let \(\gamma = \Psi(t)\) be a singular isotopy and let \(\Phi(\gamma)\) be the path integral along it. Construct a homotopy from \(\gamma\) to the constant singular isotopy in the stratification of knots with at least \(m - 1\) double points, and additional worse singularities. The only events to consider are codimension \(m + 2\) (why \(m + 2\)? is it to do with homotopy being "2"-dimensional?) events. They all change the \(\Phi(\gamma)\) by \(f(\tftterm)\) or \(f(\totterm)\) (or similar with \ref{eq:diff} relations, which we've said are implicit).
+
+		Once the homotopy is complete, we are done as \(\Phi(\gamma_{\text{const}}) = 0\). On a down-to-earth level, why does this imply \(f\) can be integrated?
+	\end{mdframed}
+\end{proof}
+
+In the order of Questions \ref{qu:integration-theory} and Definitions \ref{def:integration-theory-groups}, it would be natural to next talk about the secondary and further obstructions to integration. However, but let us postpone this until after we have discussed constants of integration and finite type invariants, at which point we will be able to express things more clearly.
 
 % TODO: The following:
 % - Are these sufficient conditions for integration?
@@ -220,32 +239,49 @@ are in \(P\mathcal{K}_{m} = \ker \partial_{m}\).
 % - This will involve introducing weight systems and chord diagrams
 % - Finite type/Vassiliev invariants
 
-The constants of integration are the information that is lost when differentiating, or the information to be chosen when integrating. In the case of knots, \(C\mathcal{K}_{m} = \mathcal{K}_{m} / \partial \mathcal{K}_{m + 1}\), so \(m\)-singular knots modulo (the image of) \((m + 1)\)-singular knots. Since the objects already have \(m\) singular points, the quotient asserts that additional crossing changes are free. For example, the following \(2\)-singular knots differ by the image of a \(3\)-singular knot, so are equivalent in \(C\mathcal{K}_{2}\):
+\begin{mdframed}
 
-% TODO: Insert figure of crossing change.
+	The constants of integration are the information that is lost when differentiating, or the information to be chosen when integrating. In the case of knots, \(C\mathcal{K}_{m} = \mathcal{K}_{m} / \partial \mathcal{K}_{m + 1}\), so \(m\)-singular knots modulo (the image of) \((m + 1)\)-singular knots. Since the objects already have \(m\) singular points, the quotient asserts that additional crossing changes are free. For example, the following \(2\)-singular knots differ by the image of a \(3\)-singular knot, so are equivalent in \(C\mathcal{K}_{2}\):
 
-Thus, elements of \(C\mathcal{K}_{m}\) are described only by the combinatorial data of the cyclic order in which the singular points are traversed on the knot.
+	% TODO: Insert figure of crossing change.
 
-\begin{definitions}
-	\label{def:chord-diagram}
+	Thus, elements of \(C\mathcal{K}_{m}\) are described only by the combinatorial data of the cyclic order in which the singular points are traversed on the knot.
 
-	\begin{enumerate}
-		\item A \textbf{chord diagram} of order \(m\) is an element of \(\mathcal{K}_{m} / \partial \mathcal{K}_{m + 1}\), or equivalently an oriented circle with a distinguished set of \(m\) pairs of points, considered up to orientation-preserving diffeomorphism of the circle. Chords are drawn between each pair of points. The vector space spanned by chord diagrams of order \(m\) is denoted \(\mathcal{D}_{m}\).
-		\item The \textbf{chord diagram of an \(m\)-singular knot \(K\)}, denoted \(\sigma(K)\) is the chord diagram formed by the following process. Place \(2m\) points on an oriented circle, two for each singular point of \(K\). Traversing both \(K\) and the circle, label the points on the circle in the order in which the singular points of \(K\) are traversed. Each label is given twice, pairing up the \(2m\) points, forming \(\sigma(K)\).
-	\end{enumerate}
-\end{definitions}
+	\begin{definitions}
+		\label{def:chord-diagram}
 
-\begin{example}
-	\[
-		\includegraphics[width=0.14\textwidth, valign=c]{graphics/knot_9_33_singular.pdf}
-		\quad \overset{\sigma}{\longmapsto} \quad
-		\includegraphics[width=0.13\textwidth, valign=c]{graphics/chord_diagram_of_knot_9_33_singular.pdf}
-	\]
-\end{example}
+		\begin{enumerate}
+			\item A \textbf{chord diagram} of order \(m\) is an element of \(\mathcal{K}_{m} / \partial \mathcal{K}_{m + 1}\), or equivalently an oriented circle with a distinguished set of \(m\) pairs of points, considered up to orientation-preserving diffeomorphism of the circle. Chords are drawn between each pair of points. The vector space spanned by chord diagrams of order \(m\) is denoted \(\mathcal{D}_{m}\).
+			\item The \textbf{chord diagram of an \(m\)-singular knot \(K\)}, denoted \(\sigma(K)\) is the chord diagram formed by the following process. Place \(2m\) points on an oriented circle, two for each singular point of \(K\). Traversing both \(K\) and the circle, label the points on the circle in the order in which the singular points of \(K\) are traversed. Each label is given twice, pairing up the \(2m\) points, forming \(\sigma(K)\).
+		\end{enumerate}
+	\end{definitions}
 
-Given a functional
+	\begin{example}
+		\[
+			\includegraphics[width=0.14\textwidth, valign=c]{graphics/knot_9_33_singular.pdf}
+			\quad \overset{\sigma}{\longmapsto} \quad
+			\includegraphics[width=0.13\textwidth, valign=c]{graphics/chord_diagram_of_knot_9_33_singular.pdf}
+		\]
+	\end{example}
 
-% TODO: Justify or motivate the quotient in the definition of the constants of integration. This leads to chord diagrams. Chord diagrams are exactly singular knots up to crossing change. Actuality tables and the full integration procedure. The Hutchings and Dror stuff about the secondart obstructions vanishing, and the fundamental theorem of Vassiliev invariants.
+\end{mdframed}
+
+We return now to the secondary (and higher) obstructions, the association between \(S\mathcal{K}\) and \(\ker \partial\) remains, namely \(S\mathcal{K}_{m} = \ker(\partial_{m + 1} \partial_{m}) / \ker(\partial_{m})\). To answer Question \ref{qu:integration-theory} (b), and determine when a singular knot invariant intgrates fully, it means computing these obstructions, however kernel of \(\partial^{2}\) and higher powers are quite difficult to compute. As such, there are only partial results in this direction, though that's not to say they aren't fundamental.
+
+\begin{theorem}[Fundamental Theorem of Vassiliev Invariants]
+	\label{thm:fundamental-theorem-of-vassiliev-invariants}
+	Let \(f\) be an invariant of \(m\)-singular knots satsifying \textup{\ref{eq:topological-four-term}}, \textup{\ref{eq:topological-one-term}} and the additional condition that \(\delta f = 0\). Then \(f\) integrates \(m\) times into a genuine knot invariant.
+\end{theorem}
+
+\begin{corollary}
+	The fundamental theorem of Vassiliev invariants holds even if the additional condition is replaced by \(\delta^{k} f = 0\) for some \(k\).
+\end{corollary}
+
+\begin{conjecture}
+	\label{conj:every-t4t-t1t-integrates}
+	An invariant \(f\) of \(m\)-singular knots satisfying \textup{\ref{eq:topological-four-term}} and \textup{\ref{eq:topological-one-term}} integrates \(m\) times into a genuine knot invariant.
+\end{conjecture}
+
 % TODO: Reformulation of the Weierstrauss conjecture as the fact that no knot invariant extends to contradict the relations. Perhaps the chord diagram ncatlab statements about cohomology.
 
 
